--- a/client/package.json
+++ b/client/package.json
@@ -5,11 +5,15 @@
   "dependencies": {
     "axios": "^0.18.0",
     "http-proxy-middleware": "^0.19.1",
+    "rc-slider": "^8.6.6",
     "react": "^16.8.3",
+    "react-compound-slider": "^1.1.0",
     "react-dom": "^16.8.3",
+    "react-dual-rangeslider": "^1.2.16",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
+    "reactrangeslider": "^3.0.6",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
     "redux-thunk": "^2.3.0"
