--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "server": "nodemon index.js",
     "client": "npm run start --prefix client",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm instal --prefix client && npm run build --prefix client"
   },
   "engines": {
     "node": "11.6.0",
