--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.437.0",
     "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
@@ -27,6 +28,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.4.14",
     "multer": "^1.4.1",
+    "multer-s3": "^2.9.0",
     "nodemailer": "^5.1.1",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
