added video upload system

--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,10 @@
     "react-dom": "^16.8.3",
     "react-dual-rangeslider": "^1.2.16",
     "react-redux": "^6.0.1",
+    "react-responsive-carousel": "^3.1.47",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
+    "react-toastify": "^5.0.1",
     "react-widgets": "^4.4.10",
     "reactrangeslider": "^3.0.6",
     "reactstrap": "^8.0.0",
